<resources>

    <string name="app_name">美服天下</string>
    <string name="menu_search">搜索</string>
    <string name="home_recommend">首页推荐</string>
    <string name="cart">购物车</string>
    <string name="login_login">登录</string>
    <string name="please_input_username">请输入手机号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="tv_login_register">没有账号？马上注册</string>
    <string name="login">登录</string>
    <string name="click_login">点击登录</string>
    <string name="my_order">我的订单</string>
    <string name="see_more_order">查看更多订单</string>
    <string name="my_head_icon">我的头像</string>
    <string name="my_receiver_addr">我的收货地址</string>
    <string name="no_login_text">亲，你还没有登录呢！</string>
    <string name="logining">登录中</string>
    <string name="tel_number">手机号</string>
    <string name="please_input_tel_no">请输入手机号</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="relname">真实姓名</string>
    <string name="nickname">昵称</string>
    <string name="please_input_relname">请输入真实姓名</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="gender">性别</string>
    <string name="male">男士</string>
    <string name="female">女士</string>
    <string name="register_now">立即注册</string>
    <string name="main_addr">地址</string>
    <string name="please_input_addr">请输入收发货地址,为了方便请尽量详细</string>
    <string name="upload_icon">上传我的头像</string>
    <string name="set_my_addr">设置收货地址</string>
    <string name="exit">注销</string>
    <string name="pressed_again_to_exit">再按一次退出美服天下</string>
    <string name="re_password">重复密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="please_input_re_pwd">请输入确认密码</string>
    <string name="password_are_not_the_same">密码输入不一致</string>
    <string name="please_try_to_input_an_addr">请填写地址信息</string>
    <string name="tips">温馨提示</string>
    <string name="are_you_sure_to_exit">确认要注销吗？</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="registering">注册中</string>
    <string name="network_error">网络异常</string>
    <string name="up_cloth">上衣</string>
    <string name="under_cloth">下装</string>
    <string name="lodding">加载中</string>
    <string name="no_data">暂无数据</string>
    <string name="shop_price">价格(元)</string>
    <string name="sale_count">销量：</string>
    <string name="no_more_data">没有数据了</string>
    <string name="searching">搜索</string>
    <string name="delete_cart">删除</string>
    <string name="try_on_it">马上试衣</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="comment">------评论------</string>
    <string name="loading_cloth_img">正在加载衣服图片</string>
    <string name="load_cloth_img_failed">加载衣服模型图片失败</string>
    <string name="load_cloth_img_success">加载衣服模型图片成功</string>
    <string name="bust">胸围：</string>
    <string name="waist">腰围：</string>
    <string name="hip">臀围：</string>
    <string name="hand">手长：</string>
    <string name="leg">腿长：</string>
    <string name="reset">还原数据</string>
    <string name="submit">提交订单</string>
    <string name="please_login">请先登录</string>
    <string name="uploading">上传中</string>
    <string name="make_sure_to_submit">确定要提交订单吗？</string>
    <string name="add_to_cart_already">已经加入了购物车了</string>
    <string name="empty_cart">购物车竟然是空的，差评！</string>
    <string name="add_to_cart_success">成功加入购物车</string>
    <string name="price">价格(元)</string>
    <string name="type">类型:</string>
    <string name="username_not_exist">用户名不存在</string>
    <string name="password_was_mod">密码被修改，请重新登录</string>
    <string name="please_long_click_to_select">请长按进行选择</string>
    <string name="delete">删除</string>
    <string name="no_select">没有选择任何商品</string>
    <string name="no_order">当前状态下没有订单</string>
    <string name="order_status">订单状态：</string>
    <string name="upload_time">提交时间：</string>
    <string name="comment_content">请输入评价内容</string>
    <string name="submit_comment">提交</string>
    <string name="my_addr">我的地址</string>
    <string name="no_info_now">暂无信息,请输入</string>
    <string name="submit_addr">提交</string>
    <string name="edit">编辑</string>
    <string name="addr_cannot_be_empty">地址不能为空</string>
    <string name="set_main">设为默认</string>
    <string name="add_addr">添加</string>
    <string name="comment_addr">编辑地址</string>
    <string name="no_change">该地址没有做任何修改</string>
    <string name="are_you_sure_to_delete">确定要删除吗？</string>
    <string name="use_user_icon">使用我的头像</string>
    <string name="use_model_icon">使用模特头像</string>
    <string name="make_sure_to_change_icon">更换头像会重置数据，确定要更换？</string>
    <string name="you_have_no_icon">你还没有上传自己的头像</string>
    <string name="not_match_your_gender">该衣服与你的性别不符</string>
    <string name="order_uploading_now">订单正在提交中</string>
    <string name="please_input_key">请输入关键字</string>
</resources>
