<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ll_tyr_on_body_adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/try_on_sb"
        android:paddingRight="@dimen/try_on_sb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bust"/>

            <TextView
                android:id="@+id/tv_try_on_bust"
                style="@style/AppTheme.TextViewFlagTitle"
                android:background="@drawable/text_view_bg"
                />

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="70"/>

            <SeekBar
                android:id="@+id/sb_try_on_bust"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="100"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waist"/>

            <TextView
                android:id="@+id/tv_try_on_waist"
                style="@style/AppTheme.TextViewFlagTitle"
                android:background="@drawable/text_view_bg"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="50"/>

            <SeekBar
                android:id="@+id/sb_try_on_waist"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="80"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hip"/>

            <TextView
                android:id="@+id/tv_try_on_hip"
                style="@style/AppTheme.TextViewFlagTitle"
                android:background="@drawable/text_view_bg"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="70"/>

            <SeekBar
                android:id="@+id/sb_try_on_hip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="100"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hand"/>

            <TextView
                android:id="@+id/tv_try_on_hand"
                style="@style/AppTheme.TextViewFlagTitle"
                android:background="@drawable/text_view_bg"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="70"/>

            <SeekBar
                android:id="@+id/sb_try_on_hand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="90"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leg"/>

            <TextView
                android:id="@+id/tv_try_on_leg"
                style="@style/AppTheme.TextViewFlagTitle"
                android:background="@drawable/text_view_bg"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="90"/>

            <SeekBar
                android:id="@+id/sb_try_on_leg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                style="@style/AppTheme.TextViewFlagTitle"
                android:text="120"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/man_under"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="matrix"/>

        <ImageView
            android:id="@+id/man_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="matrix"
            />

        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
        <!--android:id="@+id/man_bust"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleType="matrix"/>-->

        <!--<ImageView-->
        <!--android:id="@+id/man_waist"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleType="matrix"/>-->
        <!--</LinearLayout>-->

        <ImageView
            android:id="@+id/man_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="matrix"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bg_size"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_shop_detail_change_head"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ll_shop_detail_try_on"
            android:descendantFocusability="blocksDescendants"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv_shop_detail_change_head"
                style="@style/AppTheme.TextViewStyleBlack"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/use_user_icon"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/text_size_large"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_shop_detail_submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ll_shop_detail_add_to_cart"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center">

            <TextView
                style="@style/AppTheme.TextViewStyleBlack"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/text_size_large"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_try_on_cart"
        android:layout_below="@id/ll_tyr_on_body_adjust"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_width="150dp"
        android:layout_marginBottom="@dimen/bottom_bg_size"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_try_on_open_cart"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_nav_cart_selected"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

        <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
            android:id="@+id/rv_try_on_cart"
            android:layout_width="100dp"
            android:layout_height="match_parent">
        </com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView>
    </LinearLayout>

</RelativeLayout>